test: 코드 로직 변경(수정)
- 로또 결과 부분 테스트 재구성
- 이것저것 사용..